h4 was too close to image. fixed. NOW all done :D

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ h1 {
 } */
 
 h4 {
-    margin: 0 0 0 0;
+    margin: 15px 0 0 0;
 }
 
 p {
